Video Alignment fix

--- a/less/content.less
+++ b/less/content.less
@@ -147,7 +147,8 @@
 	margin-top: 0;
 	margin-bottom: 24px;
 }
-// .video-container {
+.video-container {
+	float: right;
 //     position: relative;
 //     padding-bottom: 56.25%;
 //     padding-top: 30px; height: 0; overflow: hidden;
@@ -161,7 +162,7 @@
 // 	    width: 100%;
 // 	    height: 100%;
 // 	}
-// }
+}
 
 .archive {
 	.page-header {
