--- a/style.css
+++ b/style.css
@@ -825,6 +825,9 @@ textarea:focus,
   margin-top: 0;
   margin-bottom: 24px;
 }
+.video-container {
+  float: right;
+}
 .archive .page-header {
   width: 75%;
   margin-left: 25%;
